# OpenTracer_Rusted

./: Cargo.toml  NOTE.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/trace-ir/: Cargo.toml
crates/trace-ir/src/: analysis.rs  call_frame.rs  lib.rs  opcode.rs  word.rs
crates/trace-rpc/: Cargo.toml
crates/trace-rpc/src/: lib.rs  validation.rs
